# stylist

./: .gitignore  Cargo.toml  README.md  main.py  objective.md  pyproject.toml  vector_stores.json
python_src/: StylistAPIComponent.py
src/: embedding.rs  main.rs  routes.rs  store.rs
tests/: embedding_test.rs
