[package]
name = "stylist"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
async-openai = "0.26.0"
dim = { git = "https://github.com/AspadaX/dim" }
image = "0.25.5"
serde = "1.0.215"
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
