[package]
name = "stylist"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
async-openai = "0.26.0"
base64 = "0.22.1"
dim = { git = "https://github.com/AspadaX/dim" }
image = "0.25.5"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
simple_logger = "5.0.0"
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
